# clio

./: .clang-format  .clang-tidy  .clangd  .cmake-format.yaml  .codecov.yml  .gitignore  .hadolint.yml  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  _typos.toml  cliff.toml  conanfile.py
benchmarks/: CMakeLists.txt  Playground.cpp
benchmarks/rpc/: WorkQueueBenchmarks.cpp
benchmarks/util/async/: ExecutionContextBenchmarks.cpp
benchmarks/util/log/: LoggerBenchmark.cpp
src/etl/: AmendmentBlockHandlerInterface.hpp  CMakeLists.txt  CacheLoader.hpp  CacheLoaderInterface.hpp  CacheLoaderSettings.cpp  CacheLoaderSettings.hpp  CacheUpdaterInterface.hpp  CorruptionDetector.hpp  ETLHelpers.cpp  ETLHelpers.hpp  ETLService.cpp  ETLService.hpp  ETLServiceInterface.hpp  ETLState.cpp  ETLState.hpp  ExtractorInterface.hpp  InitialLoadObserverInterface.hpp  LedgerFetcherInterface.hpp  LedgerPublisherInterface.hpp  LoadBalancer.cpp  LoadBalancer.hpp  LoadBalancerInterface.hpp  LoaderInterface.hpp  MPTHelpers.cpp  MPTHelpers.hpp  Models.hpp  MonitorInterface.hpp  MonitorProviderInterface.hpp  NFTHelpers.cpp  NFTHelpers.hpp  NetworkValidatedLedgers.cpp  NetworkValidatedLedgers.hpp  NetworkValidatedLedgersInterface.hpp  README.md  RegistryInterface.hpp  SchedulerInterface.hpp  Source.cpp  Source.hpp  SystemState.hpp  TaskManagerInterface.hpp  (+3 more)
src/etl/impl/: AmendmentBlockHandler.cpp  AmendmentBlockHandler.hpp  AsyncData.hpp  AsyncGrpcCall.cpp  AsyncGrpcCall.hpp  BaseCursorProvider.hpp  CacheLoader.hpp  CacheUpdater.hpp  CursorFromAccountProvider.hpp  CursorFromDiffProvider.hpp  CursorFromFixDiffNumProvider.hpp  Extraction.cpp  Extraction.hpp  ExtractionDataPipe.hpp  Extractor.hpp  ForwardingSource.cpp  ForwardingSource.hpp  GrpcSource.cpp  GrpcSource.hpp  LedgerFetcher.hpp  LedgerLoader.hpp  LedgerPublisher.hpp  Loading.cpp  Loading.hpp  Monitor.cpp  Monitor.hpp  MonitorProvider.hpp  Registry.hpp  Scheduling.hpp  SourceImpl.hpp  SubscriptionSource.cpp  SubscriptionSource.hpp  TaskManager.cpp  TaskManager.hpp  TaskManagerProvider.hpp  TaskQueue.hpp  Transformer.hpp
src/etlng/: AmendmentBlockHandlerInterface.hpp  CMakeLists.txt  CacheLoaderInterface.hpp  CacheUpdaterInterface.hpp  ETLService.cpp  ETLService.hpp  ETLServiceInterface.hpp  LedgerPublisherInterface.hpp  LoadBalancer.cpp  LoadBalancer.hpp  LoadBalancerInterface.hpp  LoaderInterface.hpp  Models.hpp  MonitorInterface.hpp  MonitorProviderInterface.hpp  SchedulerInterface.hpp  Source.cpp  Source.hpp  TaskManagerInterface.hpp  TaskManagerProviderInterface.hpp
src/etlng/impl/: AmendmentBlockHandler.cpp  AmendmentBlockHandler.hpp  AsyncGrpcCall.cpp  AsyncGrpcCall.hpp  CacheUpdater.hpp  Extraction.cpp  Extraction.hpp  ForwardingSource.cpp  ForwardingSource.hpp  GrpcSource.cpp  GrpcSource.hpp  LedgerPublisher.hpp  Loading.cpp  Loading.hpp  Monitor.cpp  Monitor.hpp  MonitorProvider.hpp  Registry.hpp  SourceImpl.hpp  TaskManager.cpp  TaskManager.hpp  TaskManagerProvider.hpp  TaskQueue.hpp
src/migration/: CMakeLists.txt  MigrationApplication.cpp  MigrationApplication.hpp  MigrationInspectorFactory.hpp  MigrationInspectorInterface.hpp  MigrationManagerInterface.hpp  MigratiorStatus.hpp  MigratorStatus.cpp  README.md
src/migration/cassandra/: CassandraMigrationBackend.hpp  CassandraMigrationManager.hpp
src/migration/impl/: MigrationInspectorBase.hpp  MigrationManagerBase.hpp  MigrationManagerFactory.cpp  MigrationManagerFactory.hpp  MigratorsRegister.hpp  Spec.hpp
src/util/: AccountUtils.hpp  Assert.cpp  Assert.hpp  Atomic.hpp  Batching.hpp  BlockingCache.hpp  BytesConverter.hpp  CMakeLists.txt  Channel.hpp  Concepts.hpp  Constants.hpp  Coroutine.cpp  Coroutine.hpp  CoroutineGroup.cpp  CoroutineGroup.hpp  JsonUtils.hpp  LedgerUtils.cpp  LedgerUtils.hpp  MoveTracker.hpp  Mutex.hpp  ObservableValue.hpp  OverloadSet.hpp  Profiler.hpp  Random.cpp  Random.hpp  Repeat.cpp  Repeat.hpp  ResponseExpirationCache.cpp  ResponseExpirationCache.hpp  Retry.cpp  Retry.hpp  ScopeGuard.hpp  Shasum.cpp  Shasum.hpp  SignalsHandler.cpp  SignalsHandler.hpp  SourceLocation.hpp  Spawn.hpp  StopHelper.cpp  StopHelper.hpp  (+13 more)
src/util/async/: AnyExecutionContext.hpp  AnyOperation.hpp  AnyStopToken.hpp  AnyStrand.hpp  Concepts.hpp  Error.hpp  Operation.hpp  Outcome.hpp  README.md
src/util/config/: Array.cpp  Array.hpp  ArrayView.cpp  ArrayView.hpp  ConfigConstraints.cpp  ConfigConstraints.hpp  ConfigDefinition.cpp  ConfigDefinition.hpp  ConfigDescription.hpp  ConfigFileInterface.hpp  ConfigFileJson.cpp  ConfigFileJson.hpp  ConfigFileYaml.hpp  ConfigValue.hpp  Error.hpp  ObjectView.cpp  ObjectView.hpp  Types.cpp  Types.hpp  ValueView.cpp  ValueView.hpp
src/util/log/: LogService.cpp  Logger.cpp  Logger.hpp  PrettyPath.cpp  PrettyPath.hpp
src/util/newconfig/: Array.cpp  Array.hpp  ConfigConstraints.cpp  ConfigConstraints.hpp  ConfigDefinition.cpp  ConfigDefinition.hpp  ConfigDescription.hpp  ConfigFileInterface.hpp  ConfigFileJson.cpp  ConfigFileJson.hpp  ConfigValue.hpp  Types.cpp  Types.hpp  ValueView.hpp
src/util/prometheus/: Bool.hpp  Counter.hpp  Gauge.hpp  Histogram.hpp  Http.cpp  Http.hpp  Label.cpp  Label.hpp  MetricBase.cpp  MetricBase.hpp  MetricBuilder.cpp  MetricBuilder.hpp  MetricsFamily.cpp  MetricsFamily.hpp  OStream.cpp  OStream.hpp  (+2 more)
src/web/: AdminVerificationStrategy.cpp  AdminVerificationStrategy.hpp  CMakeLists.txt  Connection.cpp  Connection.hpp  Context.hpp  Error.hpp  HttpSession.hpp  MessageHandler.hpp  PlainWsSession.hpp  ProcessingPolicy.hpp  ProxyIpResolver.cpp  ProxyIpResolver.hpp  README.md  RPCServerHandler.hpp  Request.cpp  Request.hpp  Resolver.cpp  Resolver.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  SslHttpSession.hpp  SslWsSession.hpp  SubscriptionContext.cpp  SubscriptionContext.hpp  SubscriptionContextInterface.hpp
tests/integration/: CMakeLists.txt  Main.cpp  README.md  TestGlobals.cpp  TestGlobals.hpp
tests/unit/: CMakeLists.txt  ConfigTests.cpp  JsonUtilTests.cpp  LogServiceInitTests.cpp  LoggerTests.cpp  Main.cpp  Playground.cpp  ProfilerTests.cpp  README.md
(+837 files in other folders)
