add_executable(clio_integration_tests)

target_sources(
    clio_integration_tests
    PRIVATE
        data/BackendFactoryTests.cpp
        data/cassandra/BackendTests.cpp
        data/cassandra/BaseTests.cpp
        migration/cassandra/DBRawData.cpp
        migration/cassandra/CassandraMigrationManagerTests.cpp
        migration/cassandra/ExampleTransactionsMigrator.cpp
        migration/cassandra/ExampleObjectsMigrator.cpp
        migration/cassandra/ExampleLedgerMigrator.cpp
        migration/cassandra/ExampleDropTableMigrator.cpp
        util/CassandraDBHelper.cpp
        # Test runner
        TestGlobals.cpp
        Main.cpp
)

target_include_directories(clio_integration_tests PRIVATE .)
target_link_libraries(
    clio_integration_tests
    PUBLIC clio_testing_common
    PRIVATE Boost::program_options
)
set_target_properties(
    clio_integration_tests
    PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}
)

clio_patch_binary(clio_integration_tests)
